SERVER-30936 Ensure operation session info is initialized only once